# AgroPi

./: .gitignore  InstallGuide.md  InstallProcedure  README.md  classifier.py  index.html
.github/ISSUE_TEMPLATE/: bug_report.md  social_media.md
backup/: CMakeLists.txt
docs/: index.html
hardware/Relay Board/Relay/: Relay.ino
software/: AgroPi  CMakeCache.txt  CMakeLists.txt  Doxyfile
software/ai/: CMakeLists.txt  classifier.py  livestream.cpp  main.cpp
software/cmake/: StaticAnalyzers.cmake
software/controller/: Controller.h
software/controller/peripherials/: CCS811.h  Camera.cpp
software/docs/: CMakeLists.txt  CONTRIBUTING.md  Design.md  Doxyfile.in  FileFolderStructure.md  index.html  roadmap.md
software/docs/Doxygen/html/: CONTRIBUTING_8md.html  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8h.html  Camera_8h__dep__incl.map  Camera_8h__dep__incl.md5  Camera_8h__incl.map  Camera_8h__incl.md5  Camera_8h_source.html  ControllerThread_8cpp.html  ControllerThread_8cpp__incl.map  ControllerThread_8cpp__incl.md5  ControllerThread_8h.html  ControllerThread_8h__dep__incl.map  ControllerThread_8h__dep__incl.md5  ControllerThread_8h__incl.map  ControllerThread_8h__incl.md5  ControllerThread_8h_source.html  Controller_8cpp.html  Controller_8cpp__incl.map  Controller_8cpp__incl.md5  Controller_8h.html  Controller_8h__dep__incl.map  Controller_8h__dep__incl.md5  Controller_8h__incl.map  Controller_8h__incl.md5  Controller_8h_source.html  CppThread_8h.html  CppThread_8h__dep__incl.map  CppThread_8h__dep__incl.md5  CppThread_8h__incl.map  CppThread_8h__incl.md5  CppThread_8h_source.html  CppTimerCallback_8h.html  CppTimerCallback_8h__incl.map  CppTimerCallback_8h__incl.md5  CppTimerCallback_8h_source.html  CppTimer_8cpp.html  CppTimer_8cpp__incl.map  (+382 more)
software/docs/Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  (+76 more)
software/docs/Doxygen/latex/: CONTRIBUTING_8md.tex  Camera_8cpp.tex  Camera_8cpp__incl.md5  Camera_8h.tex  Camera_8h__dep__incl.md5  Camera_8h__incl.md5  ControllerThread_8cpp.tex  ControllerThread_8cpp__incl.md5  ControllerThread_8h.tex  ControllerThread_8h__dep__incl.md5  ControllerThread_8h__incl.md5  Controller_8cpp.tex  Controller_8cpp__incl.md5  Controller_8h.tex  Controller_8h__dep__incl.md5  Controller_8h__incl.md5  CppThread_8h.tex  CppThread_8h__dep__incl.md5  CppThread_8h__incl.md5  CppTimerCallback_8h.tex  CppTimerCallback_8h__incl.md5  CppTimer_8cpp.tex  CppTimer_8cpp__incl.md5  CppTimer_8h.tex  CppTimer_8h__dep__incl.md5  CppTimer_8h__incl.md5  Design_8md.tex  DriverSensorTest_8cpp.tex  DriverSensorTest_8cpp__incl.md5  FileFolderStructure_8md.tex  GPIODriver_8cpp.tex  GPIODriver_8cpp__incl.md5  GPIODriver_8h.tex  GPIODriver_8h__dep__incl.md5  I2CDriver_8cpp.tex  I2CDriver_8cpp__incl.md5  I2CDriver_8h.tex  I2CDriver_8h__dep__incl.md5  I2CDriver_8h__incl.md5  I2CSensor_8h.tex  (+162 more)
software/main/: AgroPiThread.cpp  AgroPiThread.h  CMakeLists.txt  ServerThread.h  main.cpp
software/src/: AgroPi  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install.sh  main.cpp
software/src/controller/: Actuator.cpp  Actuator.h  Controller.cpp  Controller.h  Sampler.cpp  Sampler.h
software/src/controller/cpp-httplib-master/: CMakeCache.txt  Makefile  cmake_install.cmake  httplibConfig.cmake  httplibConfigVersion.cmake
software/src/controller/peripherials/: CCS811.cpp  Camera.cpp  Camera.h  GPIODriver.cpp  GPIODriver.h  I2CDriver.cpp  I2CDriver.h  I2CSensor.h  RelayBoard.cpp  RelayBoard.h  SGP30.cpp  SGP30.h  SHT31D.cpp  SHT31D.h  VEML7700.cpp  VEML7700.h
software/src/controller/peripherials/Resources/: seedcascade.xml
software/src/nginx/: nginx-index.html
software/src/threads/: AgroPiThread.cpp  AgroPiThread.h  ControllerThread.cpp  ControllerThread.h  CppThread.h  SamplerThread.cpp  SamplerThread.h  ServerThread.cpp  ServerThread.h  json_fastcgi_web_api.h
software/src/utils/: CppTimer.cpp  CppTimer.h  CppTimerCallback.h  typeDefinitions.h  utils.cpp  utils.h
software/src/website/: fakesensor.html  nginx-sites-enabled-default  package-lock.json  textonly.html
software/test/: CMakeLists.txt  DriverSensorTest.cpp  IntegrationTests.cpp  TestFunctions.h  script1.py  test.cpp
software/threads/: AgroPiThread.cpp  AgroPiThread.h
software/web/: README.md  requirements.txt  run.py
software/web/app/: application.py  config.py
software/web/app/auth/: views.py
software/web/app/common/: decorators.py  models.py  utils.py
software/web/app/control/: controllers.py  views.py
software/web/app/dashboard/: controllers.py  views.py
software/web/app/measurements/: __init__.py  controllers.py  views.py
software/web/app/observations/: controllers.py  views.py
software/web/app/settings/: controllers.py  views.py
software/web/app/static/: control.html  observations.html
software/web/app/static/assets/css/: login.css  now-ui-dashboard.css
software/web/app/static/assets/css/plugins/: netliva_switch.css
software/web/app/static/assets/js/: control.js  dashboard.js  login.js  utils.js
software/web/app/static/assets/js/plugins/: netliva_switch.js
software/web/app/templates/: base.html
software/web/app/templates/auth/: login.html
software/web/app/templates/control/: control.html
software/web/app/templates/dashboard/: dashboard.html
software/web/app/templates/observations/: observations.html
software/web/app/templates/settings/: settings.html
software/web/html/: control.html  dashboard.html
